[package]
name = "yellowstone-grpc-kafka"
version = "1.0.0-rc.0+solana.1.16.1"
authors = ["Triton One"]
edition = "2021"
description = "Yellowstone gRPC Kafka Producer/Dedup/Consumer"
publish = false

[dependencies]
anyhow = "1.0.62"
async-trait = "0.1.73"
atty = "0.2.14"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
const-hex = "1.6.2"
futures = "0.3.24"
hyper = { version = "0.14.27", features = ["server"] }
lazy_static = "1.4.0"
prometheus = "0.13.2"
rdkafka = { version = "0.33.2", features = ["ssl", "sasl"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.7"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
tokio-stream = "0.1.11"
tonic = { version = "0.9.2", features = ["gzip", "tls", "tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
yellowstone-grpc-proto = { path = "../yellowstone-grpc-proto" }

[build-dependencies]
anyhow = "1.0.62"
cargo-lock = "9.0.0"
git-version = "0.3.5"
vergen = { version = "8.2.1", features = ["build", "rustc"] }
