[package]
name = "yellowstone-grpc-proto"
version = "12.1.0+solana.3.1.8"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Geyser Protobuf Definitions"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = true

[dependencies]
bytes = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

[build-dependencies]
anyhow = { workspace = true }
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
default = ["tonic", "tonic-compression"]
tonic = ["dep:tonic", "dep:tonic-prost"]
tonic-compression = ["tonic", "tonic/gzip", "tonic/zstd"]
account-data-as-bytes = [
    "dep:bytes"
]

[lints]
workspace = true
