[package]
name = "yellowstone-grpc-tools"
version = "1.0.0-rc.11+solana.1.18.17"
authors = { workspace = true }
edition = { workspace = true }
description = "Yellowstone gRPC Tools"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = false

[[bin]]
name = "grpc-google-pubsub"
required-features = ["google-pubsub"]

[[bin]]
name = "grpc-kafka"
required-features = ["kafka"]

[[bin]]
name = "grpc-scylladb"
required-features = ["scylladb"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
atty = { workspace = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
const-hex = { workspace = true, optional = true }
deepsize = { workspace = true, optional = true }
etcd-client = { workspace = true, optional = true }
futures = { workspace = true }
google-cloud-googleapis = { workspace = true, optional = true }
google-cloud-pubsub = { workspace = true, optional = true }
hyper = { workspace = true }
json5 = { workspace = true }
lazy_static = { workspace = true }
local-ip-address = { workspace = true, optional = true }
prometheus = { workspace = true }
scylla = { workspace = true, optional = true, features = ["chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, optional = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["signal", "time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["gzip"] }
tonic-health = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, optional = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
rdkafka = { workspace = true, features = ["sasl", "ssl"], optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
rdkafka = { workspace = true, features = ["sasl", "ssl-vendored"], optional = true }

[build-dependencies]
project-root = "0.2.2"
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[features]
default = ["google-pubsub", "kafka"]
google-pubsub = ["google-cloud-googleapis", "google-cloud-pubsub"]
kafka = ["const-hex", "rdkafka", "sha2"]
scylladb = ["scylla", "serde_with", "deepsize", "uuid", "local-ip-address", "chrono", "thiserror", "etcd-client"]
