[package]
name = "yellowstone-grpc-client-simple"
version = "1.11.0+solana.1.17.5"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = false

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
env_logger = "0.10.0"
futures = "0.3.24"
hex = "0.4.3"
log = { version = "0.4.14", features = ["std"] }
maplit = "1.0.2"
serde_json = "1.0.86"
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time"] }
yellowstone-grpc-client = { path = "../../yellowstone-grpc-client" }
yellowstone-grpc-proto = { path = "../../yellowstone-grpc-proto" }
