[package]
name = "yellowstone-grpc-client-simple"
version = "1.13.0+solana.1.18.14"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = false

[[bin]]
name = "client"

[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
