[package]
name = "yellowstone-grpc-napi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[workspace]
# This is an independent workspace, not part of the parent workspace

[dependencies]
napi = { version = "=3.4.0", features = ["async", "napi9", "serde-json", "web_stream", "compat-mode"] }
napi-derive = "=3.3.0"
napi-derive-backend = "=3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-transaction-status = "=3.1.6"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.11", features = ["transport", "tls", "gzip", "zstd"] }
rustls = { version = "0.23", features = ["ring"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
yellowstone-grpc-client = "11.0.0"
yellowstone-grpc-proto = "11.0.0"
prost = "~0.14"
bs58 = { version = "0.5.0", features = ["alloc"] }
fastrand = "2.0"
lazy_static = "1.5.0"
prost-types = "~0.14"
solana-storage-proto = "3.1.6"
home = "=0.5.11"

[build-dependencies]
napi-build = "=2.2.4"
napi-sys = "=3.0.1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.5.0"


[profile.release]
lto = true
opt-level = 3


[package.metadata.napi]
name = "yellowstone-grpc-napi"

[patch.crates-io]
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v11.0.0+solana.3.1.6"}
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v11.0.0+solana.3.1.6"}
