[package]
name = "yellowstone-grpc-napi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
napi = { workspace = true, features = ["async", "napi9", "serde-json", "web_stream", "compat-mode", "dyn-symbols"] }
napi-derive = { workspace = true }
napi-derive-backend = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-transaction-status = { workspace = true }
base64 = { workspace = true }
wincode = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
rustls = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
futures-channel = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
prost = { workspace = true }
prost_011 = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
fastrand = { workspace = true }
lazy_static = { workspace = true }
prost-types = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true, features = ["wincode"] }
# Keep solana-transaction-error/wincode on a compatible transitive wincode line.
solana-instruction-error = { workspace = true }
solana-pubkey = { workspace = true }
home = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
napi-sys = { workspace = true }

[package.metadata.napi]
name = "yellowstone-grpc-napi"
