[package]
name = "yellowstone-grpc-solana-encoding-wasm"
version = "4.0.0"
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-grpc"
license = "Apache-2.0"
keywords = ["solana"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# getrandom is used by a dependency which does not enable the wasm_js feature and causes compilation for wasm to fail.
# thus, this needs to be added as a dependency with the feature enabled. Refer the Makefile in root for the build commands
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1.0.86"
solana-transaction-status = "~3.1.0"
wasm-bindgen = "0.2.100"
yellowstone-grpc-proto = { path = "../../yellowstone-grpc-proto", version = "11.0.0", default-features = false, features = ["convert"] }

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
